Correction sortByAuthor(). Recherche chaîne accessible pour tte la bibliothèque. Modif page retour de recherche, alignée sur affichage sélection.

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -81,6 +81,10 @@ a {
     color: $bibnphi-text-color;
 }
 
+.book-row {
+    width: 95%;
+}
+
 .open-book-row {
     border: 1px solid darkblue;
     box-shadow: 5px 5px 5px darkblue;
